@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.1
-Date: 2013-06-27
-Packaged: 2013-06-27; dylan
+Version: 1.1-1
+Date: 2013-07-19
+Packaged: 2013-07-19; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
